test/testdata/functions/missing_one_arg_error.lox
fun add(x, y) {
  print x + y;
}

add(1); // error: add() missing 1 argument: y
